--- a/chamber/join.html
+++ b/chamber/join.html
@@ -22,105 +22,78 @@
     <link rel="icon" href="images/favicon.ico">
 </head>
 <header>
-    <div class="viewport">
-        <img src="images/logo.webp" alt="logo">
+    <div class="viewport"><img src="images/logo.webp" alt="logo"></div>
+  </header>
+  <nav id="mainnav">
+    <ul>
+      <li class="hamburger" id="menubutton"><img src="images/hamburgerbutton.png" alt="hamburger menu"></li>
+      <li class="menuItem">
+        <a href="index.html">Home</a>
+      </li>
+      <li class="menuItem">
+        <a href="discover.html">Discover</a>
+      </li>
+      <li class="menuItem">
+        <a href="join.html">Join</a>
+      </li>
+      <li class="menuItem">
+        <a href="directory.html">Directory</a>
+      </li>
+    </ul>
+  </nav>
+  <main>
+    <h1>Join the Chamber</h1>
+    <form method="post" action="images/thankyou.jpg"></form>
+    <div class="blocks">
+      <fieldset>
+        <legend>Applicant Information</legend> <label>First Name* <input type="text" name="fname" required=""></label> <label>Last Name* <input type="text" name="lname" required=""></label> <label>Title <input type="text" name="title" pattern="[A-Za-z0-9\s-]{7,}"></label> <label>Email* <input type="email" name="email" required="" placeholder="someone@example.com"></label> <label>Phone* <input type="tel" name="phone" placeholder="1234567890" required=""></label>
+      </fieldset>
+      <fieldset>
+        <legend>Business Information</legend> <label>Business Name <input type="text" name="businessName"></label> <label for="business">Business Description</label> 
+        <textarea name="business" placeholder="Business Description"></textarea> <input type="hidden" name="datetime" id="datetime" value="">
+      </fieldset>
+      <fieldset>
+        <legend>Membership Level</legend> <label><input type="radio" name="audience" value="np"> <span>NP Membership ( FREE )</span></label>
+        <p class="label"><label>For Non-Profit organizations</label></p><label><input type="radio" name="audience" value="br" checked> <span>Bronze Membership ($50/yr)</span></label>
+        <p class="label"><label>For Small Businesses</label></p><label><input type="radio" name="audience" value="si"> <span>Silver Membership ($100/yr)</span></label>
+        <p class="label"><label>For Medium Businesses</label></p><label><input type="radio" name="audience" value="go"> <span>Gold Membership ($200/yr)</span></label>
+        <p class="label"><label>For Large Businesses</label></p>
+      </fieldset>
+      <fieldset class="hiddenForm">
+        <legend>Membership Pricing</legend>
+        <p class="title">NP (Non-Profit) Membership</p>
+        <p>NP Membership includes all the benefits of a Bronze Membership, but is free for Non-Profit organizations.</p>
+        <p class="title">Bronze Membership</p>
+        <p>Bronze Membership includes an invitation to all Chamber events, a listing on the Chamber website, and a listing in the Chamber newsletter.</p>
+        <p class="title">Silver Membership</p>
+        <p>Silver Membership includes all the benefits of a Bronze Membership, plus a 10% discount on all Chamber events.</p>
+        <p class="title">Gold Membership</p>
+        <p>Gold Membership includes all the benefits of a Silver Membership, plus a 20% discount on all Chamber events.</p>
+      </fieldset>
     </div>
-    </header>
-    <body>
-          <nav id="mainnav">
-            <ul>
-                <li class="hamburger" id="menubutton">
-                    <img src="images/hamburgerbutton.png" alt="hamburger menu">
-                </li>
-
-                <li class="menuItem"><a href="index.html">Home</a></li>
-                <li class="menuItem"><a href="discover.html">Discover</a></li>
-                <li class="menuItem"><a href="join.html">Join</a></li>
-                <li class="menuItem"><a href="directory.html">Directory</a></li>
-            </ul>
-        </nav>
-        <main>
-            <h1>Join the Chamber</h1>
-            <form method="post" action="images/thankyou.jpg">
-            </form>
-                <div class="blocks">
-                    <fieldset>
-                        <legend>Applicant Information</legend>
-                        <label>First Name* <input type="text" name="fname" required></label>
-                        <label>Last Name* <input type="text" name="lname" required></label>
-                        <label>Title <input type="text" name="title" pattern="[A-Za-z0-9\s-]{7,}"></label>
-                        <label>Email* <input type="email" name="email" required placeholder="someone@example.com"></label>
-                        <label>Phone* <input type="tel" name="phone" placeholder="1234567890" required></label>
-                    </fieldset>
-                    <fieldset>
-                        <legend>Business Information</legend>
-                        <label>Business Name <input type="text" name="businessName"></label>
-                        <label for="business">Business Description</label>
-                        <textarea name="business" placeholder="Business Description"></textarea>
-                        <input type="hidden" name="datetime" id="datetime" value="">
-                    </fieldset>
-                    <fieldset>
-                        <legend>Membership Level</legend>
-                        <label>
-                            <input type="radio" name="audience" value="np">
-                            <span>NP Membership ( FREE )</span>
-                            <p class="label">For Non-Profit organizations</p>
-                        </label>
-                        <label>
-                            <input type="radio" name="audience" value="br" checked>
-                            <span>Bronze Membership ($50/yr)</span>
-                            <p class="label">For Small Businesses</p>
-                        </label>
-                        <label>
-                            <input type="radio" name="audience" value="si">
-                            <span>Silver Membership ($100/yr)</span>
-                            <p class="label">For Medium Businesses</p>
-                        </label>
-                        <label>
-                            <input type="radio" name="audience" value="go">
-                            <span>Gold Membership ($200/yr)</span>
-                            <p class="label">For Large Businesses</p>
-                        </label>
-                    </fieldset>
-                    <fieldset class="hiddenForm">
-                        <legend>Membership Pricing</legend>
-                        <p class="title">NP (Non-Profit) Membership</p>
-                        <p>NP Membership includes all the benefits of a Bronze Membership, but is free for Non-Profit organizations.</p>
-                        <p class="title">Bronze Membership</p>
-                        <p>Bronze Membership includes an invitation to all Chamber events, a listing on the Chamber website, and a listing in the Chamber newsletter.</p>
-                        <p class="title">Silver Membership</p>
-                        <p>Silver Membership includes all the benefits of a Bronze Membership, plus a 10% discount on all Chamber events.</p>
-                        <p class="title">Gold Membership</p>
-                        <p>Gold Membership includes all the benefits of a Silver Membership, plus a 20% discount on all Chamber events.</p>
-                    </fieldset>
-                </div>
-                <div class="buttonframe">
-                    <input type="submit" value="Submit">
-                </div>
-        </main>
-        <footer>
-            <div class="ftop">
-                <div class="ftopLeft">
-                    <h2>Chamber of Commerce</h2>
-                    <p>27 E. Main St.</p>
-                    <p>Hudson, Ohio 44236</p>
-                </div>
-                <div class="ftopRight">
-                    <h2>Contact Information</h2>
-                    <p>hudsonchamber.org</p>
-                    <p>(330)-650-0261</p>
-                </div>
-            </div>
-            <div class="fbottom">
-                <span>© 2023</span>
-                <span>Seth Markle</span>
-                <span>WDD 230</span>
-                <span id="moddate">Date Modified</span>
-            </div>
-        </footer>
-        <p id="time">---</p>
-  <script src="scripts/menu.js"></script>
+    <div class="buttonframe">
+      <input type="submit" value="Submit">
+    </div>
+  </main>
+  <footer>
+    <div class="ftop">
+      <div class="ftopLeft">
+        <h2>Chamber of Commerce</h2>
+        <p>27 E. Main St.</p>
+        <p>Hudson, Ohio 44236</p>
+      </div>
+      <div class="ftopRight">
+        <h2>Contact Information</h2>
+        <p>hudsonchamber.org</p>
+        <p>(330)-650-0261</p>
+      </div>
+    </div>
+    <div class="fbottom">
+      <span>© 2023</span> <span>Seth Markle</span> <span>WDD 230</span> <span id="moddate">Date Modified</span>
+    </div>
+  </footer>
+  <p id="time">---</p>
+  <script src="scripts/currentdate.js"></script> 
+  <script src="scripts/lazyscripts.js"></script>
 </body>
-
 </html>
-        
