--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,7 +55,8 @@
       <h3>Through our events, activites, and advocacy, we aim to foster a strong and vibrant original small town feel. Whether you're a small business proprietor, a large corperation,<br>
       or just someone looking to support our community, we want you to join us.</h3><br>
       <br>
-      <h3>Become a member and start enjoying the numerous benefits of the Chamber. This includes access to networking events, business services, and the occasion to have your voice heard on important issues affecting the business community.</h3>
+      <h3>Become a member and start enjoying the numerous benefits of the Chamber. This includes access to networking events, business services, and the occasion to have your voice
+          <br>heard on important issues affecting the business community.</h3>
     </div>
     <div class="cards">
       <h2>Events</h2>
@@ -77,7 +78,7 @@
         <picture><img src="images/powerhour.jpg" alt="powerhour"></picture>
         <div class="cardContent">
           <h2>December 21st, 2023</h2><br>
-          <p>Want to beef up your portfolio or resume? Come vist our power hour. This is professional help from top employer scouts who seeking out new employees.</p>
+          <p>Want to beef up your portfolio or resume? This is professional help for those who need it.</p>
         </div>
       </div>
     </div>
@@ -86,23 +87,28 @@
       <div class="card">
         <picture><img src="images/firesafety.jpg" alt="fire" id="p1"></picture>
         <div class="cardContent">
-          <h2 id="t1">Are you prepared?</h2>
-          <p id="d1"></p>
+          <h2>Are you prepared?</h2>
+          <br>
+          <p>Are you keeping your loved ones and coworkers safe?</p>
         </div>
       </div>
       <div class="card">
         <picture><img src="images/ohiobmv.jpg" alt="BMV" id="p2"></picture>
         <div class="cardContent">
-          <h2 id="t2">Welcome to the Ohio BMV</h2>
-          <p id="d2"></p>
+          <h2>Welcome to the Ohio BMV</h2>
+          <br>
+          <p>Take care of all your vehical needs and questions.</p>
+          <p>With one click we take you to the Ohio BMV.</p>
         </div>
       </div>
       <div class="card">
         <picture><img src="images/permit.jpg" alt="Permits" id="p3"></picture>
         <div class="cardContent">
-          <h2 id="t3">Apply for a permit</h2>
-          <p id="d3"></p>
-        </div>
+          <h2>Apply for a permit</h2>
+          <p>Check out this link to see all that you need to know.</p>
+          <p>Do you have questions?</p>
+          <p>We have the answers.</p>
+          </div>
       </div>
     </div>
   </main>
