--- a/chamber/index.html
+++ b/chamber/index.html
@@ -82,6 +82,7 @@
         </div>
       </div>
     </div>
+  </div>
     <div class="cards">
       <h2>Spotlights</h2>
       <div class="card">
@@ -130,7 +131,8 @@
     </div>
   </footer>
   <p id="time">---</p>
-  <script src="scripts/currentdate.js"></script> 
+  <script src="scripts/currentdate.js"></script>
+  <script src="scripts/windchill.js"></script> 
   <script src="scripts/lazyscripts.js"></script>
 </body>
 </html>
