--- a/final/scoots.html
+++ b/final/scoots.html
@@ -38,38 +38,41 @@
                 <li class="menuItem"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <a href="reservations.html" class="button nohover">Make your reservation today!</a>
         <main>
             <div class="textContent">
                 <h1>Scoots</h1>
                 <p><h2>Welcome to Scoots where we have you covered on simple rentals.
-                    We are all about freshness here at Bountiful Foods.  We are here to help you live a better lifestyle.  Our
-                    delivery trucks are on the road six days a week to serve and meet your needs.
-                    Looking to help us out?  We are always in search of others who share our vison and goals.</h2>  
+                       If you are looking to rent a power scooter, atv, or jeep during
+                       your vaction stop than look no further.</h2>  
                 </p>
             </div>
-                <div class="cardContent">
-                    <h2>Name that fruit and we just may have it!</h2>
-                    <p><h3>If you're looking for some fresh and sweet in your life look no further.</h3></p>
+                <div class="card">
+                    <h2>Scooters</h2>
+                    <p><h3>We have electric single and two passenger scooters for rent.</h3></p>
                     <picture>
-                        <img src="photos/fruitphotos.jpg" alt="">
+                        <img src="images/scooter.jpg" alt="scooter">
                     </picture>
-                <div class="cardContent">
-                    <h2>Name that veggie and we just may have it!</h2>
-                    <p><h3>If you're looking for some fresh and crunchy veggies in your life look no further.</h3></p>
-                    </div>
                 </div>
                 <div class="card">
+                    <h2>ATV's</h2>
+                    <p><h3>If you are looking for something to go off roading in we have you covered.</h3></p>
                     <picture>
-                        <img src="photos/manyveggies.jpg" alt="">
-                    </picture>
-                    <div class="cardContent">
-                    <div class="banner">
-                        <img src="photos/banner.png" alt="">
-                    </div>
+                        <img src="images/atv.jpg" alt="atv">
+                    </picture>    
                 </div>
                 <div class="card">
+                    <h2>Jeeps</h2>
+                    <p><h3>If you are traveling a lot you may want these instead.</h3></p>
                     <picture>
-                        <img src="images/hero.png" alt="">
+                        <img src="images/jeep.jpg" alt="jeep">
+                    </picture>
+                </div>
+                <div class="card">
+                    <h2>Our Dealership</h2>
+                    <p><h3>Come check out what we have to suit your adventure.</h3></p>
+                    <picture>
+                        <img src="images/dealer.jpg" alt="dealer">
                     </picture>
                 </div>
             </div>
@@ -102,7 +105,6 @@
                 </div>
             </div>
             <div class="cards">
-                <a href="reservations.html" class="button nohover">Make your reservation today!</a>
                 <div class="card">
                     <picture>
                         <img src="photos/drink1.jpg" alt="">
