--- a/final/reservations.html
+++ b/final/reservations.html
@@ -40,17 +40,39 @@
         </nav>
         <main>
             <main class="main-join">
-                <h1></h1>
-                <form class="form-join" method="get" action="thankyou.html">
-                  <label class="form_label" for="firstName">First Name *</label> 
-                  <input type="text" id="firstName" name="firstName" required="">
-                  <label class="form_label" for="email">Email *</label>
-                  <input type="email" id="email" name="email" placeholder="example@example.com" required="">
-                  <label class="form_label" for="cellPhone">Cell Phone *</label>
-                  <input type="tel" id="cellPhone" name="cellPhone" required="">
-                  </select><br>
-                </form>
-              </main>
+                <h1>Book Your Reservation</h1>
+                <div class="grid">
+                    <h2>Rental Services & Services</h2>
+                    <fieldset> 
+                        <p>A $50 security deposit is required to confirm reservations.</p>
+                        <p>A valid drivers license is required in hand at the time of rental.</p>
+                        <p>No one under the age of 12 years of age are allowed to ride on the scooters.</p>
+                        <p>Fuel charge is not included.</p>Fuel charge is not included.
+                        <p>Unlimited mileage.</p>
+                        <p>Liability insurance is included.</p>
+                        <p>Damage insurance is available for purchase.</p>
+                        <p>Free delivery to Cozumel hotels or Airbnbs for 2+ day rentals.</p>
+                        <p>Payment via Google Pay, Apple Pay, cash, credit card, debit card, or venmo.</p>
+                        <p>Rentals may be returned to either physical location.</p>
+                    </fieldset>
+                </div>
+                <div class="blocks">
+                    <fieldset>
+                      <legend>Reserve Your Reservation</legend> 
+                      <label>Name* <input type="text" name="name" required="" placeholder="Your Name"></label>
+                      <label>Email* <input type="email" name="email" required="" placeholder="youremail@example.com"></label>
+                      <label>Phone Number* <input type="phone" name="phone" placeholder="(XXX)XXX-XXXX" required=""></label>
+                      <label>Street Address* <input type="address" name="address" required="" placeholder="123 St"></label>
+                      <label>City* <input type="city" name="city" required="" placeholder="City"></label>
+                      <label>State* <input type="state" name="state" required="" placeholder="XX"></label>
+                      <label>Zip* <input type="zip" name="zip" required="" placeholder="XXXXX"></label>
+                      <label>Reservation Dates* <input type="dates" name="dates" required="" placeholder="XX/XX/XXXX"></label>
+                      <label>Comments/Special Arrangements* <input type="comments" name="comments" required="" placeholder="Comments Here"></label>
+                      <div class="buttonframe">
+                        <input type="submit" value="Submit">
+                    </div>
+                    </fieldset>
+                </div>    
         </main>
         <footer>
             <div class="ftop">
