--- a/final/scoots.html
+++ b/final/scoots.html
@@ -85,54 +85,7 @@
                         <p id="caption-desc" class="inline">Loading...</p>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="cardContent">
-                        <h2>Next 3 days</h2>
-                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt="icon" id="weather-icon1" class="weatherIcon inline">
-                        <p id="current-temp1" class="inline">Loading...</p>
-                        <p id="caption-desc1" class="inline">Loading...</p>
-                    </div>
-                    <div class="cardContent">
-                        <img src="" alt="icon" id="weather-icon2" class="weatherIcon inline">
-                        <p id="current-temp2" class="inline">Loading...</p>
-                        <p id="caption-desc2" class="inline">Loading...</p>
-                    </div>
-                    <div class="cardContent">
-                        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt="icon" id="weather-icon3" class="weatherIcon inline">
-                        <p id="current-temp3" class="inline">Loading...</p>
-                        <p id="caption-desc3" class="inline">Loading...</p>
-                    </div>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="card">
-                    <picture>
-                        <img src="photos/drink1.jpg" alt="">
-                    </picture>
-                    <div class="cardContent">
-                        <h2 id="t1">Razzelberry</h2>
-                        <p id="d1">Enjoy this fushion of raspberries and blackberries in a cool combination.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <picture>
-                        <img src="photos/drink2.jpg" alt="">
-                    </picture>
-                    <div class="cardContent">
-                        <h2 id="t2">One Primary Fruit</h2>
-                        <p id="d2">Each drink is made of one main fruit with bits of others for a unique blend.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="cardContent">
-                        <picture>
-                            <img src="photos/drink3.jpg" alt="">
-                        </picture>
-                        <h2 id="t3">Blood Orange Sunrise</h2>
-                        <p id="d3">Nothing like waking up with the power of oranges.</p>
-                    </div>
-                </div>
-            </div>
+            </div>    
         </main>
         <footer>
             <div class="ftop">
@@ -156,6 +109,7 @@
     </div>
     <p class="last-update" id="lastModified"></p>
     <p id="p1"></p>
+    <script src="scripts/weather.js"></script>
     <script>
         var date = new Date();
         document.getElementById("p1").innerHTML = date;
