--- a/final/rentals.html
+++ b/final/rentals.html
@@ -38,6 +38,20 @@
                 <li class="menuItem"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <main>
+            <h1>Types of Rentals</h1>
+
+            <h2>Honda Motor Scooters</h2>
+        <p>Honda Metropolitan (49cc) - 1 person</p>
+        <p>Honda Dio (110cc) - 2 person</p>
+        <p>Honda PCX150 (149cc) - 2 person</p>
+            <h2>Side-by-Side ATVs</h2>
+        <p>Honda Pioneer 1000 - 4 person</p>
+            <h2>Jeeps</h2>
+        <p>Jeep Wrangler - 4 door manuel with A/C - 5 person</p>
+        <p>Jeep Wrangler - 2 door - open air - manuel - 4 person</p>
+
+        </main>
 
         <footer>
             <div class="ftop">
