--- a/final/reservations.html
+++ b/final/reservations.html
@@ -42,12 +42,13 @@
             <main class="main-join">
                 <h1>Book Your Reservation</h1>
                 <div class="grid">
-                    <h2>Rental Services & Services</h2>
-                    <fieldset> 
+                    <h2>Rental Services & Agreements</h2>
+                    <fieldset>
+                        <legend>Rental Agreement</legend> 
                         <p>A $50 security deposit is required to confirm reservations.</p>
                         <p>A valid drivers license is required in hand at the time of rental.</p>
                         <p>No one under the age of 12 years of age are allowed to ride on the scooters.</p>
-                        <p>Fuel charge is not included.</p>Fuel charge is not included.
+                        <p>Fuel charge is not included.</p>
                         <p>Unlimited mileage.</p>
                         <p>Liability insurance is included.</p>
                         <p>Damage insurance is available for purchase.</p>
